deply-app/dev/gateway/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-gateway-svc
  namespace: dev-zh
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30121
  selector:
    app: dev-zh-gateway
  type: NodePort
