deply-app/dev/gateway/ingress-dev-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: dev-zh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev.zhtx.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dev-gateway-svc
            port: 
              number: 8080
      - path: /ioc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dev-nginx-svc
            port: 
              number: 80
